# rust-toolbox

./: .travis.yml  BUILD.bazel  Cargo.toml  MANIFEST  PLEASE_READ_THIS  README  README.md  build_all  deny.toml  master.toml
.github/: dependabot.yml
.github/workflows/: test.yml
align_tools/: Cargo.toml
align_tools/src/: lib.rs
amino/: Cargo.toml
amino/src/: lib.rs
ansi_escape/: Cargo.toml
ansi_escape/src/: ansi_to_html.rs  lib.rs
binary_vec_io/: Cargo.toml
binary_vec_io/src/: lib.rs
bio_edit/: Cargo.toml  README.md
bio_edit/src/alignment/pairwise/: mod.rs
dna/: Cargo.toml  LICENSE
dna/src/: lib.rs
equiv/: Cargo.toml
equiv/src/: lib.rs
exons/: Cargo.toml
exons/src/: lib.rs
expr_tools/: Cargo.toml  LICENSE  README.md
expr_tools/src/: lib.rs
fasta/: Cargo.toml
fasta/src/: lib.rs
fasta_tools/: Cargo.toml
fasta_tools/src/: lib.rs
graph_simple/: Cargo.toml
graph_simple/src/: lib.rs
hyper/: Cargo.toml
hyper/src/: lib.rs
hyperbase/: Cargo.toml
hyperbase/src/: lib.rs
io_utils/: Cargo.toml
io_utils/src/: lib.rs
kmer_lookup/: Cargo.toml
kmer_lookup/src/: lib.rs
load_feature_bc/: Cargo.toml
load_feature_bc/src/: lib.rs
marsoc/: Cargo.toml
marsoc/src/: lib.rs
mirror_sparse_matrix/: Cargo.toml  LICENSE
mirror_sparse_matrix/src/: lib.rs
perf_stats/: Cargo.toml  LICENSE  README.md
perf_stats/src/: lib.rs
pretty_trace/: Cargo.toml  README.md
pretty_trace/examples/: bad_traceback.rs
pretty_trace/src/: lib.rs
pretty_trace_tests/: Cargo.toml
pretty_trace_tests/src/: main.rs
src/: annotate.rs  lib.rs  refx.rs  transcript.rs
stats/: Cargo.toml
stats/src/: lib.rs
stats_utils/: Cargo.toml  README.md
stats_utils/src/: lib.rs
stirling_numbers/: Cargo.toml  README.md
stirling_numbers/src/: lib.rs
string_utils/: Cargo.toml
string_utils/src/: lib.rs
tables/: Cargo.toml
tables/src/: lib.rs
vdj_ann/: BUILD.bazel  Cargo.toml
vdj_ann/src/: annotate.rs  lib.rs  refx.rs  transcript.rs  types.rs  vdj_features.rs
vdj_ann/test/inputs/: test_no_internal_soft_clipping_ref.fa  test_productive_is_valid_ref.fa
vdj_ann/vdj_refs/human/: reference.json
vdj_ann/vdj_refs/human/fasta/: regions.fa
vdj_ann/vdj_refs/mouse/: reference.json  regions.fa
vdj_ann/vdj_refs/mouse/fasta/: regions.fa
vdj_ann/vdj_refs_2.0/human/: reference.json
vdj_ann/vdj_refs_5.0/human/: reference.json
vdj_ann/vdj_refs_5.0/mouse/: reference.json
vdj_ann/vdj_refs_old/: README
vdj_ann_ref/: Cargo.toml  README
vdj_ann_ref/src/: lib.rs
vdj_ann_ref/vdj_refs/human/: reference.json
vdj_ann_ref/vdj_refs/human/fasta/: regions.fa
vdj_ann_ref/vdj_refs/mouse/: reference.json
vdj_ann_ref/vdj_refs/mouse/fasta/: regions.fa
vdj_ann_ref/vdj_refs_3.1/human/: reference.json
vdj_ann_ref/vdj_refs_3.1/mouse/: reference.json
vdj_ann_ref/vdj_refs_4.0/mouse/: reference.json
vdj_ann_ref/vdj_refs_5.0/human/: reference.json
vdj_ann_ref/vdj_refs_7.0/: README
vdj_ann_ref/vdj_refs_7.0/human/fasta/: regions.fa
vdj_ann_ref/vdj_refs_7.0/mouse/: reference.json
vdj_ann_ref/vdj_refs_7.0/mouse/fasta/: regions.fa
vdj_refs/human/: regions.fa
vdj_types/: Cargo.toml
vdj_types/src/: lib.rs
vec_utils/: Cargo.toml
vec_utils/src/: lib.rs
vector_utils/: Cargo.toml
vector_utils/src/: lib.rs
