[workspace]

members = [
    "align_tools",
    "amino",
    "ansi_escape",
    "binary_vec_io",
    "dna",
    "equiv",
    "exons",
    "fasta_tools",
    "graph_simple",
    "hyperbase",
    "io_utils",
    "kmer_lookup",
    "load_feature_bc",
    "marsoc",
    "mirror_sparse_matrix",
    "perf_stats",
    "pretty_trace",
    "stats_utils",
    "stirling_numbers",
    "string_utils",
    "tables",
    "vdj_ann",
    "vdj_types",
    "vector_utils",
]

[profile.release]
debug = true
