[workspace]

members = [
    "align_tools",
    "amino",
    "ansi_escape",
    "binary_vec_io",
    "dna",
    "equiv",
    "exons",
    "expr_tools",
    "fasta_tools",
    "graph_simple",
    "hyperbase",
    "io_utils",
    "kmer_lookup",
    "load_feature_bc",
    "mirror_sparse_matrix",
    "perf_stats",
    "pretty_trace",
    "stats_utils",
    "stirling_numbers",
    "string_utils",
    "tables",
    "vdj_ann",
    "vdj_ann_ref",
    "vdj_types",
    "vector_utils",
]

[profile.dev]
debug = 1
opt-level = 3
split-debuginfo = "unpacked"

[profile.release]
debug = 1
lto = true
codegen-units = 1
overflow-checks = true

[profile.test]
debug = 1
opt-level = 3
split-debuginfo = "unpacked"

