[package]
name = "align_tools"
version = "0.1.6"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
bio = { git = "https://github.com/rust-bio/rust-bio", rev = "9f1452b128fbdbeb54d0823f6da17f40e3cc1575" }
debruijn = "0.3.2"
itertools = ">= 0.8, <= 0.11"
string_utils = "0.1"
vector_utils = "0.1.3"
