[package]
name = "amino"
version = "0.1.0"
authors = []
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."

[dependencies]
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn.git" }
