[package]
name = "binary_vec_io"
version = "0.1.5"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
failure = "0.1.5"
itertools = ">= 0.8, <= 0.9"
