[package]
name = "exons"
version = "0.1.1"
authors = ["David Jaffe <david.jaffe@10xgenomics.com"]
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
io_utils = "0.2.5"
string_utils = "0.1.1"
vector_utils = "0.1.3"
