[package]
name = "exons"
version = "0.1.5"
authors = ["David Jaffe <david.jaffe@10xgenomics.com"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"
edition = "2018"

[dependencies]
io_utils = { version = "0.3", path = "../io_utils" }
string_utils = { version = "0.1", path = "../string_utils" }
vector_utils = { version = "0.1", path = "../vector_utils" }
