[package]
name = "expr_tools"
version = "0.1.1"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
edition = "2018"
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]

evalexpr = "6"
statrs = "0.15"
string_utils = "0.1"
vector_utils = "0.1"
