[package]
name = "expr_tools"
version = "0.1.3"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
edition = "2018"
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]

evalexpr = ">=7, <9"
statrs = "0.15"
string_utils = { version = "0.1", path = "../string_utils" }
vector_utils = { version = "0.1", path = "../vector_utils" }
