[package]
name = "fasta"
version = "0.1.0"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."

[dependencies]
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn.git" }
flate2 = "1.0.12"
io_utils = "0.2.4"
string_utils = "0.1.0"
