[package]
name = "fasta_tools"
version = "0.1.4"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
edition = "2018"
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
debruijn = "0.3.2"
flate2 = "1.0.20"
io_utils = "0.2"
string_utils = "0.1"
