[package]
name = "fasta_tools"
version = "0.1.8"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
edition = "2018"
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
debruijn = "0.3"
flate2 = "1"
io_utils = { version = "0.3", path = "../io_utils" }
string_utils = { version = "0.1", path = "../string_utils" }
