[package]
name = "graph_simple"
version = "0.1.5"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"
edition = "2018"

[dependencies]
petgraph = ">=0.5,<0.7"
vector_utils = { version = "0.1", path = "../vector_utils" }
