[package]
name = "hyper"
version = "0.1.0"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."

[dependencies]
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn.git" }
equiv = { git = "https://github.com/10XGenomics/rust-toolbox.git" }
graph_simple = { git = "https://github.com/10XGenomics/rust-toolbox.git" }
kmer_lookup = { git = "https://github.com/10XGenomics/rust-toolbox.git" }
petgraph = "0.4.13"
vector_utils = "0.1.0"
