[package]
name = "hyper"
version = "0.1.0"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
debruijn = "0.3.2"
equiv = "0.1.1"
graph_simple = { path = "../graph_simple" }
kmer_lookup = "0.1.1"
petgraph = "0.4.13"
vector_utils = "0.1.3"
