[package]
name = "hyperbase"
version = "0.1.6"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"
edition = "2018"

[dependencies]
debruijn = "0.3.2"
equiv = "0.1"
graph_simple = "0.1"
kmer_lookup = "0.1"
petgraph = ">=0.5,<0.7"
vector_utils = "0.1"
