[package]
name = "hyperbase"
version = "0.1.8"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"
edition = "2018"

[dependencies]
debruijn = "0.3"
equiv = { version = "0.1", path = "../equiv" }
graph_simple = { version = "0.1", path = "../graph_simple" }
kmer_lookup = { version = "0.1", path = "../kmer_lookup" }
petgraph = ">=0.5,<0.7"
vector_utils = { version = "0.1", path = "../vector_utils" }
