[package]
name = "io_utils"
version = "0.2.5"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
bincode = "1.1.3"
flate2 = "1.0.16"
lz4 = "1.23.1"
serde = "1.0.90"
string_utils = "0.1.1"
vector_utils = "0.1.3"
