[package]
name = "io_utils"
version = "0.3.2"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"
edition = "2018"
include = ["src/lib.rs", "LICENSE", "README.md"]

[dependencies]
bincode = "1.1.3"
flate2 = "1"
lz4 = "1"
serde = { version = "1", features = ["derive"] }
string_utils = "0.1"
