[package]
name = "load_feature_bc"
version = "0.1.5"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
edition = "2018"
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
flate2 = "1.0.20"
io_utils = "0.2"
string_utils = "0.1"
