[package]
name = "mirror_sparse_matrix"
version = "0.1.17"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
edition = "2018"
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
binary_vec_io = { version = "0.1", path = "../binary_vec_io" }

[dev-dependencies]
io_utils = { version = "0.3", path = "../io_utils" }
pretty_trace = { version = "0.5", path = "../pretty_trace" }
