[package]
name = "perf_stats"
version = "0.1.1"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."

[dependencies]
io_utils = { path = "../io_utils" }
libc = "0.2.51"
string_utils = "0.1.1"
