[package]
name = "pretty_trace"
# When version is bumped, version in README.md also needs to be bumped.
version = "0.5.23"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Tools for generating pretty tracebacks and for profiling."
homepage = "https://github.com/10XGenomics/rust-toolbox/tree/master/pretty_trace"
keywords = ["stack", "trace", "traceback", "profiling"]
edition = "2018"
include = ["src/lib.rs", "LICENSE", "README.md"]
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
backtrace = "0.3.40"
io_utils = { version = "0.3", path = "../io_utils" }
lazy_static = "1"
libc = "0.2"
nix = ">=0.19.1, <0.24"
stats_utils = { version = "0.1", path = "../stats_utils" }
tables = { version = "0.1", path = "../tables" }
string_utils = { version = "0.1", path = "../string_utils" }
vector_utils = { version = "0.1", path = "../vector_utils" }

[target.'cfg(not(windows))'.dependencies]
pprof = { version = "0.6", features = ["protobuf"] }

[dev-dependencies]
rayon = "1"
