[package]
name = "stats_utils"
version = "0.1.3"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
edition = "2018"
include = ["src/lib.rs", "LICENSE", "README.md"]
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
