[package]
name = "stirling_numbers"
version = "0.1.1"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "A few functions relating to Stirling numbers of the second kind."
homepage = "https://github.com/10XGenomics/rust-toolbox/tree/master/stirling_numbers"

[dependencies]
num-bigint = "0.2.2"
num-rational = "0.2"
num-traits = "0.2"
rand = "0.5"
rayon = "1.0.2"
vector_utils = "0.1.0"
