[package]
name = "stirling_numbers"
version = "0.1.4"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "A few functions relating to Stirling numbers of the second kind."
homepage = "https://github.com/10XGenomics/rust-toolbox/tree/master/stirling_numbers"
edition = "2018"
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
num-traits = "^0.2"

[dev-dependencies]
num-bigint = "^0.3"
num-rational = "^0.3"
rand = ">=0.7.3, <0.9"
rayon = "1.4"
vector_utils = "0.1"
