[package]
name = "string_utils"
version = "0.1.2"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."

[dependencies]
vector_utils = "0.1.3"
