[package]
name = "tables"
version = "0.1.2"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
io_utils = "0.2"
itertools = ">= 0.8, <= 0.11"
string_utils = "0.1.1"
