[package]
name = "tables"
version = "0.1.5"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"
edition = "2018"

[dependencies]
io_utils = { version = "0.3", path = "../io_utils" }
itertools = ">= 0.8, <= 0.11"
string_utils = { version = "0.1", path = "../string_utils" }
