[package]
name = "vdj_ann"
version = "0.1.7"
authors = ["David Jaffe <david.jaffe@10xgenomics.com"]
edition = "2018"
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

# This crate is not published because it is too big.
include = ["src/**/*"]

[dependencies]
align_tools = "0.1"
amino = "0.1"
bio_edit = "0.1"
debruijn = "0.3.2"
exons = "0.1"
fasta_tools = "0.1"
flate2 = "1.0.20"
hyperbase = "0.1.4"
io_utils = "0.2"
itertools = ">= 0.8, <= 0.11"
kmer_lookup = "0.1"
pretty_trace = { version = "0.6", path = "../pretty_trace" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
sha2 = "0.9.3"
stats_utils = "0.1"
string_utils = "0.1"
vector_utils = "0.1.3"
strum = ">=0.18.0, <0.22"
strum_macros = ">=0.18.0, <0.22"
vdj_types = "0.1"
