[package]
name = "vdj_ann"
version = "0.4.1"
authors = ["David Jaffe <david.jaffe@10xgenomics.com"]
edition = "2018"
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

# This crate is not published because it is too big.
include = ["src/**/*"]

[dependencies]
align_tools = "0.1"
amino = "0.1"
bio_edit = "0.1"
debruijn = "0.3"
fasta_tools = "0.1"
hyperbase = "0.1"
io_utils = "0.3"
itertools = ">= 0.8, <= 0.11"
kmer_lookup = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stats_utils = "0.1"
string_utils = "0.1"
vector_utils = "0.1"
vdj_types = "0.2"
