[package]
name = "vdj_ann"
version = "0.4.4"
authors = ["David Jaffe <david.jaffe@10xgenomics.com"]
edition = "2018"
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

# This crate is not published because it is too big.
include = ["src/**/*"]

[dependencies]
align_tools = { version = "0.1", path = "../align_tools" }
amino = { version = "0.1", path = "../amino" }
bio_edit = { version = "0.1", path = "../bio_edit" }
debruijn = "0.3"
fasta_tools =  { version = "0.1", path = "../fasta_tools" }
hyperbase = { version = "0.1", path = "../hyperbase" }
io_utils = { version = "0.3", path = "../io_utils" }
itertools = ">= 0.8, <= 0.11"
kmer_lookup = { version = "0.1", path = "../kmer_lookup" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stats_utils = { version = "0.1", path = "../stats_utils" }
string_utils = { version = "0.1", path = "../string_utils" }
vector_utils = { version = "0.1", path = "../vector_utils" }
vdj_types = { version = "0.2", path = "../vdj_types" }
