[package]
name = "vdj_ann_ref"
version = "0.2.0"
authors = ["David Jaffe <david.jaffe@10xgenomics.com"]
edition = "2018"
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

# This crate is not published because it is too big.
publish = false

[dependencies]
debruijn = "0.3.2"
exons = "0.1"
fasta_tools = "0.1.6"
flate2 = "1.0.20"
io_utils = "0.3"
kmer_lookup = "0.1"
pretty_trace = "0.5"
sha2 = "0.9.3"
string_utils = "0.1"
vector_utils = "0.1"
vdj_ann = { version = "0.2", path = "../vdj_ann" }
