[package]
name = "vdj_ann_ref"
version = "0.2.1"
authors = ["David Jaffe <david.jaffe@10xgenomics.com"]
edition = "2018"
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

# This crate is not published because it is too big.
publish = false

[dependencies]
debruijn = "0.3"
exons = { version = "0.1", path = "../exons" }
fasta_tools =  { version = "0.1", path = "../fasta_tools" }
flate2 = "1"
io_utils = { version = "0.3", path = "../io_utils" }
kmer_lookup = { version = "0.1", path = "../kmer_lookup" }
perf_stats = { version = "0.1", path = "../perf_stats" }
pretty_trace = { version = "0.5", path = "../pretty_trace" }
sha2 = ">=0.9.3, <0.11"
string_utils = { version = "0.1", path = "../string_utils" }
vector_utils = { version = "0.1", path = "../vector_utils" }
vdj_ann = { version = "0.4", path = "../vdj_ann" }
