[package]
name = "vdj_types"
version = "0.1.2"
authors = ["Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>"]
edition = "2018"
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."

[dependencies]
enum-iterator = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
strum = ">=0.18.0, <0.22"
strum_macros = ">=0.18.0, <0.22"
