[package]
name = "vdj_types"
version = "0.1.4"
authors = ["Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>"]
edition = "2018"
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
enum-iterator = ">=0.6, <0.8"
serde = { version = "1.0", features = ["derive"] }
strum = ">=0.18.0, <0.22"
strum_macros = ">=0.18.0, <0.22"

[dev-dependencies]
serde_json = "1.0.62"
