[package]
name = "vdj_types"
version = "0.2.0"
authors = ["Sreenath Krishnan <sreenath.krishnan@10xgenomics.com>"]
edition = "2018"
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
