[package]
name = "vector_utils"
version = "0.1.4"
authors = ["David Jaffe <david.jaffe@10xgenomics.com>"]
license = "MIT"
description = "Some tools that are 'internal' for now because they are insufficiently refined and unstable, but which are used by other 'public' crates."
repository = "https://github.com/10XGenomics/rust-toolbox"
edition = "2018"
include = ["src/lib.rs", "LICENSE", "README.md"]

[dependencies]
permutation = "0.2.5"
superslice = "1.0.0"
